@@ -15,6 +15,7 @@ offlineimap (3.99.0) unstable; urgency=low
     offlineimap/init.py.
   * Moved __main__.ui to functions in UIBase: getglobalui() and
     setglobalui().
+  * Added license comments to some source files that were missing them.
 
  -- John Goerzen <jgoerzen@complete.org>  Mon, 30 Sep 2002 12:08:08 -0500
 
